[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://textures/banner.png" type="Texture" id=2]
[ext_resource path="res://textures/point.png" type="Texture" id=3]
[ext_resource path="res://textures/target.png" type="Texture" id=4]
[ext_resource path="res://textures/ice_block_shadow.png" type="Texture" id=5]
[ext_resource path="res://objects/ice_block.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/font0.tres" type="DynamicFont" id=7]
[ext_resource path="res://textures/power_under.png" type="Texture" id=8]
[ext_resource path="res://textures/power_progress.png" type="Texture" id=9]
[ext_resource path="res://textures/arrow.png" type="Texture" id=10]
[ext_resource path="res://textures/spark.png" type="Texture" id=11]

[node name="main" type="Node2D"]

script = ExtResource( 1 )

[node name="game_field" type="Node2D" parent="." index="0"]

position = Vector2( 150, 540 )
_sections_unfolded = [ "Transform" ]

[node name="ice" type="Sprite" parent="game_field" index="0"]

self_modulate = Color( 1, 1, 1, 0.436471 )
position = Vector2( 912.914, 8.23747 )
scale = Vector2( 1.6439, 1.6439 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="point" type="Sprite" parent="game_field" index="1"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="target" type="Sprite" parent="game_field" index="2"]

modulate = Color( 1, 1, 1, 0.281765 )
position = Vector2( 1356.8, 12.582 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="penguins" type="Node2D" parent="game_field" index="3"]

[node name="blocks" type="Node2D" parent="game_field" index="4"]

[node name="shadows" type="Node2D" parent="game_field/blocks" index="0"]

editor/display_folded = true
modulate = Color( 1, 1, 1, 0.867412 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="ice_block_shadow" type="Sprite" parent="game_field/blocks/shadows" index="0"]

position = Vector2( -6.1613, -567.765 )
scale = Vector2( 0.712302, 0.712302 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="ice_block_shadow2" type="Sprite" parent="game_field/blocks/shadows" index="1"]

position = Vector2( 375.912, -568.321 )
rotation = 0.108151
scale = Vector2( 0.712302, 0.712302 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="ice_block_shadow3" type="Sprite" parent="game_field/blocks/shadows" index="2"]

position = Vector2( 762.839, -552.765 )
rotation = 0.03908
scale = Vector2( 0.712302, 0.712302 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="ice_block_shadow4" type="Sprite" parent="game_field/blocks/shadows" index="3"]

position = Vector2( 1143.84, -553.765 )
rotation = 0.0436369
scale = Vector2( 0.712302, 0.712302 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="ice_block_shadow5" type="Sprite" parent="game_field/blocks/shadows" index="4"]

position = Vector2( 1525.84, -560.765 )
rotation = 0.0389606
scale = Vector2( 0.712302, 0.712302 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="ice_block_shadow6" type="Sprite" parent="game_field/blocks/shadows" index="5"]

position = Vector2( 1910.84, -558.765 )
rotation = 0.0353451
scale = Vector2( 0.712302, 0.712302 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="ice_block" parent="game_field/blocks" index="1" instance=ExtResource( 6 )]

position = Vector2( -6.3515, -571.081 )

[node name="ice_block2" parent="game_field/blocks" index="2" instance=ExtResource( 6 )]

position = Vector2( 377.5, -571.081 )
rotation = 0.105223

[node name="ice_block4" parent="game_field/blocks" index="3" instance=ExtResource( 6 )]

position = Vector2( 1141.75, -559.378 )
rotation = 0.0236205

[node name="ice_block5" parent="game_field/blocks" index="4" instance=ExtResource( 6 )]

position = Vector2( 1525.43, -565.517 )
rotation = 0.0197015

[node name="ice_block3" parent="game_field/blocks" index="5" instance=ExtResource( 6 )]

position = Vector2( 760.953, -560.828 )
rotation = 0.00985926

[node name="ice_block6" parent="game_field/blocks" index="6" instance=ExtResource( 6 )]

position = Vector2( 1909.71, -565.529 )
rotation = 0.00985926

[node name="ice_block8" parent="game_field/blocks" index="7" instance=ExtResource( 6 )]

position = Vector2( -10.4743, 583.554 )

[node name="ice_block11" parent="game_field/blocks" index="8" instance=ExtResource( 6 )]

position = Vector2( 1140.1, 595.857 )
rotation = 0.0539111
scale = Vector2( 1, 1 )

[node name="ice_block9" parent="game_field/blocks" index="9" instance=ExtResource( 6 )]

position = Vector2( 377.079, 583.554 )
rotation = 0.105223

[node name="ice_block7" parent="game_field/blocks" index="10" instance=ExtResource( 6 )]

position = Vector2( 1517.4, 595.857 )
rotation = 0.00831939

[node name="ice_block12" parent="game_field/blocks" index="11" instance=ExtResource( 6 )]

position = Vector2( 760.531, 593.806 )
rotation = 0.00985926

[node name="ice_block10" parent="game_field/blocks" index="12" instance=ExtResource( 6 )]

position = Vector2( 1896.75, 597.907 )
rotation = 0.00985926

[node name="ui" type="Node2D" parent="." index="1"]

[node name="team" type="Label" parent="ui" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 21.0
margin_top = 6.0
margin_right = 61.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="fps" type="Label" parent="ui" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1667.0
margin_top = 92.0
margin_right = 1807.0
margin_bottom = 147.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="throws" type="Label" parent="ui" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.0
margin_top = 6.0
margin_right = 170.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="total_score" type="Label" parent="ui" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 936.0
margin_top = 6.0
margin_right = 1098.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="score" type="Label" parent="ui" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1006.0
margin_top = 973.0
margin_right = 1168.0
margin_bottom = 1028.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="game_over" type="Label" parent="ui" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 749.0
margin_top = 680.0
margin_right = 1285.0
margin_bottom = 735.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "GAME OVER"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="flags" type="Node2D" parent="ui" index="6"]

[node name="power" type="TextureProgress" parent="ui" index="7"]

self_modulate = Color( 1, 1, 1, 0.66298 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_top = 662.0
margin_right = 550.0
margin_bottom = 745.0
rect_rotation = -90.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 54.627
exp_edit = false
rounded = false
texture_under = ExtResource( 8 )
texture_over = null
texture_progress = ExtResource( 9 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="pointer" type="Position2D" parent="ui" index="8"]

editor/display_folded = true
position = Vector2( 150, 540 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="arrow" type="Sprite" parent="ui/pointer" index="0"]

self_modulate = Color( 1, 1, 1, 0.640863 )
position = Vector2( 143.008, 0 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="camera_position" type="Position2D" parent="." index="2"]

position = Vector2( 960, 540 )
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera2D" parent="camera_position" index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform" ]

[node name="Light2D" type="Light2D" parent="camera_position" index="1"]

visible = false
position = Vector2( -796.569, 0.533691 )
scale = Vector2( 3.38516, 3.49657 )
enabled = true
editor_only = false
texture = ExtResource( 11 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1

[node name="go" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="timers" type="Node2D" parent="." index="4"]

[node name="tap" type="Timer" parent="timers" index="0"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[connection signal="timeout" from="go" to="." method="_on_go_timeout"]

[connection signal="timeout" from="timers/tap" to="." method="_on_tap_timeout"]


